more grunt work removed https stuff temporarily

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
   <script src="js/vendor/jquery-1.11.2.js"></script>
   <script src="js/vendor/bootstrap.min.js"></script>
 
-  <script src="js/main.js"></script>
-  <script src='https://localhost:9000/livereload.js'></script>
+  <script src="build/bundle.js"></script>
+  <!-- <script src='https://localhost:9000/livereload.js'></script> -->
 </body>
 
 </html>
